--- a/brown_rabbit/src/css/main.css
+++ b/brown_rabbit/src/css/main.css
@@ -13,6 +13,7 @@ body {
     justify-content: space-between;
     font-family: 'Times New Roman', Times, serif;
     font-size: 17px;
+    line-height: 1.5;
 }
 
 header {
@@ -24,7 +25,7 @@ header {
     justify-content: space-between;
 }
 
-#logo {
+.logo {
     width: 70%;
 }
 
@@ -63,7 +64,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    line-height: 1.5;
+    
 }
 
 .item {
@@ -74,6 +75,7 @@ a {
 
 .item img {
     width: auto;
+    height: auto;
 }
 
 .item-desc {
@@ -98,12 +100,13 @@ a {
 }
 
 .information hr {
-    width: 75%
+    width: 75%;
 }
 
 address {
     font-style: normal;
     font-weight: lighter;
+    margin-top: 10px;
 }
 
 
@@ -114,7 +117,7 @@ h2 {
 }
 
 h3 {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: lighter;
 }
 
@@ -165,7 +168,67 @@ hr {
     text-align: center;
 }
 
-#lineBreak {
+.lineBreak {
     width: 82%;
     margin: 50px auto;
+}
+
+
+/* Footer */
+#footerWrapper {
+    background-color: #000000;
+}
+
+#footer-container {
+    width: 85%;
+    margin: auto;
+    color: white;
+}
+
+.footer-container1 {
+    padding: 100px 0 60px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#footerWrapper hr {
+    color: #DDDDDD;
+}
+.footerLinks {
+    display: flex;
+    gap: 30px;
+}
+
+.footerLinks img {
+    width: 20px;
+    color:#707070; 
+}
+
+.footer-container2 {
+    display: flex; 
+    justify-content: space-between;
+    margin-top: 60px;
+}
+
+.footer-container2 div {
+    width: 30%;
+}
+
+.footer-container2 ul {
+    list-style: none;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.footer-container2 img {
+    width: 80%;
+    height: 80%;
+} 
+
+.footer-container2 address {
+    color: #707070;
+}
+
+.footer-container2 h3, h4 {
+    margin-bottom: 10px;
 }
