--- a/brown_rabbit/src/css/main.css
+++ b/brown_rabbit/src/css/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     height: 100vh;
     display: flex;
@@ -25,8 +25,8 @@ header {
     justify-content: space-between;
 }
 
-.logo {
-    width: 70%;
+#logo {
+    width: 100%;
 }
 
 .nav div {
@@ -51,12 +51,13 @@ a {
     text-decoration: none;
 }
 
+
 .second-container {
     width: 85%;
     margin: 20px auto;
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 50px;
 }
 
 .posts {
@@ -132,6 +133,7 @@ button {
     background-color: transparent;
     border-width: 1px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 button:hover {
@@ -256,7 +258,7 @@ h4 {
 .popUpDescription {
     padding: 30px 0;
     width: 90%;
-    margin: auto;  
+    margin: auto;
 }
 
 .popUpDescription p {
@@ -266,7 +268,9 @@ h4 {
 
 .popup img {
     width: 100%;
-    height: 400px;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover;
 }
 
 .openPopUp {
@@ -276,3 +280,55 @@ h4 {
 .closePopUp {
     visibility: hidden;
 }
+
+
+/* For mobile screen */
+@media screen and (max-width: 575px) {
+    body {
+        width: 100%;
+        margin: auto;
+        display: block;
+    }
+
+    .second-container {
+        flex-direction: column;
+    }
+
+    .item {
+        flex-direction: column;
+    }
+
+    .item div {
+        margin-bottom: 20px;
+    }
+
+    .item img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+
+    button {
+        border: 1px solid #000000;
+    }
+
+    #logos {
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+
+    #footerWrapper {
+        padding-bottom: 50px;
+    }
+
+
+    .footer-container1, .footer-container2 {
+        flex-direction: column;
+        gap: 30px;
+        text-align: center;
+    }
+
+    .footer-container2 div {
+        width: 100%;
+    }
+}  
